--- a/app/views/add-product-v4/is-this-case-related-to-covid-error.html
+++ b/app/views/add-product-v4/is-this-case-related-to-covid-error.html
@@ -13,17 +13,29 @@
 
 
 {% block content %}
+
+
+{{ govukErrorSummary({
+  titleText: "There is a problem",
+  errorList: [
+    {
+      text: "Select yes if the case is related to the coronavirus pandemic",
+      href: "#is-covid-error"
+    }
+  ]
+}) }}
+
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
 
       <form class="form" action="#" method="post" novalidate>
         <span class="govuk-caption-l">Report an unsafe or non-compliant product</span>
 
 
 {{ govukRadios({
-  idPrefix: "is-covid",
-  name: "covid-related",
+  idPrefix: "is-covid-error",
+  name: "covid-related-error",
   classes: "govuk-!-padding-top-3 govuk-!-padding-bottom-1",
   fieldset: {
     legend: {
@@ -33,7 +45,11 @@
     }
   },
   hint: {
+    classes: "govuk-!-margin-bottom-6",
     text: "For example, cases relating to hand sanitiser or personal protective equipmnet (PPE)."
+  },
+  errorMessage: {
+    text: "Select yes if the case is related to the coronavirus pandemic"
   },
   items: [
     {
