--- a/app/views/add-product-v4/is-this-case-related-to-covid-error.html
+++ b/app/views/add-product-v4/is-this-case-related-to-covid-error.html
@@ -29,7 +29,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <form class="form" action="#" method="post" novalidate>
+      <form action="#" method="post" novalidate>
         <span class="govuk-caption-l">Report an unsafe or non-compliant product</span>
 
 
