--- a/app/views/add-product-v4/is-this-case-related-to-covid-error.html
+++ b/app/views/add-product-v4/is-this-case-related-to-covid-error.html
@@ -30,7 +30,7 @@
     <div class="govuk-grid-column-full">
 
       <form action="#" method="post" novalidate>
-        <span class="govuk-caption-l">Report an unsafe or non-compliant product</span>
+        <span class="govuk-caption-l">Report a product</span>
 
 
 {{ govukRadios({
