--- a/app/views/add-product-v4/is-this-case-related-to-covid.html
+++ b/app/views/add-product-v4/is-this-case-related-to-covid.html
@@ -18,7 +18,7 @@
 
 
       <form action="#" method="post" novalidate>
-        <span class="govuk-caption-l">Report a product</span>
+        <span class="govuk-caption-l">Create a case</span>
 
 
 {{ govukRadios({
