--- a/app/views/create-cases-add-products/is-this-case-related-to-covid-error.html
+++ b/app/views/create-cases-add-products/is-this-case-related-to-covid-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Is this case related to coronavirus
+    Error - Is this case related to coronavirus
 {% endblock %}
 
 {% block beforeContent %}
