--- a/app/views/create-cases-add-products/is-this-case-related-to-covid-error.html
+++ b/app/views/create-cases-add-products/is-this-case-related-to-covid-error.html
@@ -30,7 +30,7 @@
     <div class="govuk-grid-column-full">
 
       <form action="#" method="post" novalidate>
-        <span class="govuk-caption-l">Create a case for product psd-503</span>
+        <span class="govuk-caption-l">Create a case</span>
 
 
 {{ govukRadios({
