--- a/app/views/create-cases-add-products/is-this-case-related-to-covid.html
+++ b/app/views/create-cases-add-products/is-this-case-related-to-covid.html
@@ -18,7 +18,7 @@
 
 
       <form action="#" method="post" novalidate>
-        <span class="govuk-caption-l">Create a case for product psd-503</span>
+        <span class="govuk-caption-l">Create a case</span>
 
 
 {{ govukRadios({
