--- a/app/views/create-cases-add-products/is-this-case-related-to-covid.html
+++ b/app/views/create-cases-add-products/is-this-case-related-to-covid.html
@@ -33,7 +33,7 @@
     }
   },
   hint: {
-    html: "For example, cases relating to hand sanitiser or personal protective equipmnet (<abbr title="Personal protective equipment">PPE</abbr>)."
+    html: 'For example, cases relating to hand sanitiser or personal protective equipmnet (<abbr title="Personal protective equipment">PPE</abbr>).'
   },
   items: [
     {
